--- a/references.bib
+++ b/references.bib
@@ -231,3 +231,16 @@
   year = {2018}
 }
 
+@book{salsburg,
+  title = {The Lady Tasting Tea: How Statistics Revolutionized Science in the Twentieth Century},
+  publisher = {Henry Holt and Company},
+  author = {David Salsburg},
+  year = {2002}
+}
+
+@book{porter,
+  title = {The Rise of Statistical Thinking, 1820–1900},
+  publisher = {Princeton University Press},
+  author = {Theodore Porter},
+  year = {2020}
+}
