--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -64,7 +64,7 @@ Past committee members:
 - Friday 10 May 2024, noon (EDT)
 	- **Amanda Coston**, Microsoft, Berkeley
 	- "TBD"
-	- [Amanda Coston](https://mandycoston.github.io)
+	- [Amanda Coston](https://mandycoston.github.io) is a Postdoc at Microsoft Research in the Machine Learning and Statistics Team. In fall 2024 she will join the Department of Statistics at UC Berkeley as an Assistant Professor. Her work considers how -- and when -- machine learning and causal inference can improve decision-making in societally high-stakes settings. Her research addresses real-world data problems that challenge the validity, equity, and reliability of algorithmic decision support systems and data-driven policy-making. A central focus of her research is identifying when algorithms, data used for policy-making, and human decisions disproportionately impact marginalized groups. Amanda earned her PhD in Machine Learning and Public Policy at Carnegie Mellon University (CMU) where she was advised by Alexandra Chouldechova and Edward H. Kennedy. Amanda is a Rising Star in EECS, Machine Learning and Data Science, Meta Research PhD Fellow, NSF GRFP Fellow, K & L Gates Presidential Fellow in Ethics and Computational Technologies, and Tata Consultancy Services Presidential Fellow. Her work has been recognized by best paper awards and featured in *The Wall Street Journal* and *VentureBeat*.
 - Friday 17 May 2024, noon (EDT) (not recorded)
 	- **Victoria Angelova**, Harvard
 	- "Algorithmic Recommendations and Human Discretion"
@@ -72,7 +72,7 @@ Past committee members:
 - Friday 24 May 2024, noon (EDT)
 	- **Belinda Li**, MIT
 	- "TBD"
-	- [Belinda Li](https://belindal.github.io/)
+	- [Belinda Li](https://belindal.github.io/) is a third-year PhD student at MIT CSAIL, affiliated with the language & intelligence (LINGO) lab @ MIT. Her advisor is Jacob Andreas. She has broad interests within natural language processing, but some high-level themes of recent work include: 1) Probing for representations of meaning in language models 2) Using language models for various natural-language tasks and grounded tasks. (What characterizes the space of tasks humans may be interested in? How do we transfer linguistic knowledge to grounded tasks? How do we best specify human intent to a language model?) 3) Improving the coherence and faithfulness of machine generations. She is funded by an NDSEG Fellowship and Clare Boothe Luce Graduate Fellowship. Previously, she spent a year at Facebook AI Applied Research, and before that, she obtained a B.S. in Computer Science at the University of Washington, where she worked with Luke Zettlemoyer.
 - Friday 31 May 2024, noon (EDT)
 	- **Ethan Busby**, BYU
 	- "TBD"
