--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -58,15 +58,15 @@ Past committee members:
 ### Upcoming
 
 - Friday 3 May 2024, noon (EDT)
-	- **Kosuke Imai**, Harvard
+	- **Kosuke Imai**, Harvard University
 	- "Does AI help humans make better decisions? A methodological framework for experimental evaluation"
 	- [Kosuke Imai](https://imai.fas.harvard.edu/) is Professor in the Department of Government and the Department of Statistics at Harvard University. He is also an affiliate of the Institute for Quantitative Social Science where his office is located. Before moving to Harvard in 2018, Imai taught at Princeton University for 15 years where he was the founding director of the Program in Statistics and Machine Learning. Imai specializes in the development of statistical methods and machine learning algorithms and their applications to social science research. His areas of expertise include causal inference, computational social science, and survey methodology. Imai leads the Algorithm-Assisted Redistricting Methodology Project (ALARM) and served as an expert witness for several high-profile legislative redistricting cases. In addition, he is the author of *Quantitative Social Science: An Introduction* (Princeton University Press, 2017). Outside of Harvard, Imai served as the President of the Society for Political Methodology from 2017 to 2019. His current research interests include: data-driven policy learning and evaluation, causal inference with high-dimensional and unstructured treatments (e.g., texts, images, videos, and maps), fairness and racial disparity analysis, algorithmic redistricting analysis, data fusion and record linkage, census and privacy.
 - Friday 10 May 2024, noon (EDT)
-	- **Amanda Coston**, Microsoft, Berkeley
+	- **Amanda Coston**, Microsoft Research and Berkeley
 	- "TBD"
 	- [Amanda Coston](https://mandycoston.github.io) is a Postdoc at Microsoft Research in the Machine Learning and Statistics Team. In fall 2024 she will join the Department of Statistics at UC Berkeley as an Assistant Professor. Her work considers how -- and when -- machine learning and causal inference can improve decision-making in societally high-stakes settings. Her research addresses real-world data problems that challenge the validity, equity, and reliability of algorithmic decision support systems and data-driven policy-making. A central focus of her research is identifying when algorithms, data used for policy-making, and human decisions disproportionately impact marginalized groups. Amanda earned her PhD in Machine Learning and Public Policy at Carnegie Mellon University (CMU) where she was advised by Alexandra Chouldechova and Edward H. Kennedy. Amanda is a Rising Star in EECS, Machine Learning and Data Science, Meta Research PhD Fellow, NSF GRFP Fellow, K & L Gates Presidential Fellow in Ethics and Computational Technologies, and Tata Consultancy Services Presidential Fellow. Her work has been recognized by best paper awards and featured in *The Wall Street Journal* and *VentureBeat*.
 - Friday 17 May 2024, noon (EDT) (not recorded)
-	- **Victoria Angelova**, Harvard
+	- **Victoria Angelova**, Harvard University
 	- "Algorithmic Recommendations and Human Discretion"
 	- [Victoria Angelova](https://sites.google.com/view/victoriaangelova) is a fourth-year PhD student in Economics at Harvard University interested in Applied Microeconomics. She received a AB in Economics from Wellesley College in 2018. Prior to starting her PhD, she was a Research Assistant at the Industrial Relations Section at Princeton University. 
 - Friday 24 May 2024, noon (EDT)
@@ -74,11 +74,11 @@ Past committee members:
 	- "TBD"
 	- [Belinda Li](https://belindal.github.io/) is a third-year PhD student at MIT CSAIL, affiliated with the language & intelligence (LINGO) lab @ MIT. Her advisor is Jacob Andreas. She has broad interests within natural language processing, but some high-level themes of recent work include: 1) Probing for representations of meaning in language models 2) Using language models for various natural-language tasks and grounded tasks. (What characterizes the space of tasks humans may be interested in? How do we transfer linguistic knowledge to grounded tasks? How do we best specify human intent to a language model?) 3) Improving the coherence and faithfulness of machine generations. She is funded by an NDSEG Fellowship and Clare Boothe Luce Graduate Fellowship. Previously, she spent a year at Facebook AI Applied Research, and before that, she obtained a B.S. in Computer Science at the University of Washington, where she worked with Luke Zettlemoyer.
 - Friday 31 May 2024, noon (EDT)
-	- **Ethan Busby**, BYU
+	- **Ethan Busby**, Brigham Young University
 	- "TBD"
 	- [Ethan Busby](ethanbusby.com) is an Assistant Professor of Political Science at Brigham Young University, specializing in political psychology, extremism, artificial intelligence, and computational social science. His research relies on various methods, using lab experiments, quasi-experiments, survey experiments, text-as-data, surveys, artificial intelligence, and large-language models. He studies extremism in democracies, including what extremism is, who people blame for extremism, and what encourages and discourages extremism.
 - Friday 7 June 2024, noon (EDT)
-	- **Lars Vilhuber**, Cornell
+	- **Lars Vilhuber**, Cornell University
 	- "Privacy protection in RCTs: The challenge of privacy protection in the field"
 	- [Lars Vilhuber](https://www.vilhuber.com/lars/academia/cv/) holds a Ph.D. in Economics from Université de Montréal, Canada, and is currently on the faculty of the Cornell University Economics Department. He has interests in labor economics, statistical disclosure limitation and data dissemination, and reproducibility and replicability in the social sciences. He is the Data Editor of the American Economic Association, and Managing Editor of the *Journal of Privacy and Confidentiality*.
 - Friday 14 June 2024, noon (EDT)
@@ -86,11 +86,11 @@ Past committee members:
 	- "Field experimentation in the U.S. safety net"
 	- [Jae Yeon Kim](https://jaeyk.github.io) is a senior data scientist at the Safety Net Innovations Lab at Code for America, and a research fellow at the SNF Agora Institute and P3 Lab at Johns Hopkins University, as well as the Center for Public Leadership and Civic Power Lab at Harvard Kennedy School. He holds a Ph.D. in political science from UC Berkeley.
 - Friday 21 June 2024, noon (EDT)
-	- **Chris Bail**, Duke
+	- **Chris Bail**, Duke University
 	- "Can Generative AI Improve Social Science"
 	- [Chris Bail](https://www.chrisbail.net/bio) is Professor of Sociology, Political Science, and Public Policy at Duke University, where he founded the Polarization Lab. He studies how artificial intelligence shapes human behavior in a range of different settings—and social media platforms in particular.
 - Friday 28 June 2024, noon (EDT)
-	- **Sasha Issenberg**, 
+	- **Sasha Issenberg**
 	- "The Lie Detectives: In Search of a Playbook for Winning Elections in the Disinformation Age"
 	- [Sasha Issenberg](https://www.sashaissenberg.com/) is a journalist and author of *"The Lie Detectives: In Search of a Playbook for Winning Elections in the Disinformation Age"* and four previous books, most recently *"The Engagement: America’s Quarter-Century Struggle Over Same-Sex Marriage."* He teaches in the UCLA Department of Political Science and is a correspondent for *Monocle*. His work has also appeared in *New York*, *The New York Times Magazine* and *George*, where he was a contributing editor. 
 
