--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -47,10 +47,6 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 
 ### Upcoming
 
-- Friday 24 May 2024, 10am (EDT)
-	- **Belinda Li**, MIT
-	- "Eliciting Human Preferences with Language Models"
-	- [Belinda Li](https://belindal.github.io/) a PhD candidate at MIT CSAIL, affiliated with the language & intelligence (LINGO) lab @ MIT. Her work focuses on improving the human-interpretability, reliability, and usability of language models: examining and improving representations of both (objective) world states and (subjective) human preferences in language models. She is funded by an NDSEG Fellowship and Clare Boothe Luce Graduate Fellowship. Previously, she spent a year at Facebook AI Applied Research, and before that, obtained her B.S. in Computer Science at the University of Washington.
 - Friday 31 May 2024, noon (EDT)
 	- **Ethan Busby**, Brigham Young University
 	- "Leveraging Generative AI for Political Persuasion: Experimental Insights into Message Effectiveness and Democratic Reciprocity"
@@ -80,6 +76,10 @@ The current organizing committee is: [Kelly Lyons](http://individual.utoronto.ca
 
 ### Past
 
+- Friday 24 May 2024, 10am (EDT)
+	- **Belinda Li**, MIT
+	- "[Eliciting Human Preferences with Language Models](https://youtu.be/xFwiqBU4_dI)"
+	- [Belinda Li](https://belindal.github.io/) a PhD candidate at MIT CSAIL, affiliated with the language & intelligence (LINGO) lab @ MIT. Her work focuses on improving the human-interpretability, reliability, and usability of language models: examining and improving representations of both (objective) world states and (subjective) human preferences in language models. She is funded by an NDSEG Fellowship and Clare Boothe Luce Graduate Fellowship. Previously, she spent a year at Facebook AI Applied Research, and before that, obtained her B.S. in Computer Science at the University of Washington.
 - Friday 17 May 2024, noon (EDT)
 	- **Victoria Angelova**, Harvard University
 	- "Algorithmic Recommendations and Human Discretion"
